[package]
name = "rustiest-boy"
version = "0.1.0"
authors = ["José Lico"]
description = "Yet another GameBoy emulator built in Rust"
license = "MIT"
repository = "https://github.com/jose-lico/rustiest-boy"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.16.0"
winit = "0.28.3"
