[package]
name = "rustiest-boy"
version = "0.1.0"
authors = ["José Lico"]
description = "Yet another GameBoy emulator built in Rust"
license = "MIT"
repository = "https://github.com/jose-lico/rustiest-boy"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.10.0"
log = "0.4.17"
wgpu = "0.16.0"
winit = "0.28.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wgpu = { version = "0.16", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
